Change negative button color from clContent -> clContentSecond

--- a/app/src/main/res/values/styles_common.xml
+++ b/app/src/main/res/values/styles_common.xml
@@ -23,7 +23,7 @@
     </style>
 
     <style name="App.Alert.NegativeButton" parent="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog">
-        <item name="android:textColor">?attr/clContent</item>
+        <item name="android:textColor">?attr/clContentSecond</item>
     </style>
 
     <style name="App.Style.BottomSheet" parent="Widget.Design.BottomSheet.Modal">
