--- a/app/src/main/res/values/styles_common.xml
+++ b/app/src/main/res/values/styles_common.xml
@@ -13,7 +13,7 @@
 
     <style name="App.Alert" parent="Theme.AppCompat.DayNight.Dialog.Alert">
         <item name="colorAccent">?attr/clAccent</item>
-        <item name="android:background">?attr/clPrimary</item>
+        <item name="android:windowBackground">?attr/clPrimary</item>
         <item name="buttonBarNegativeButtonStyle">@style/App.Alert.NegativeButton</item>
 
         <!--  For overScrollMode  -->
