Change space between checkBox/dragView and editText inside item_roll_read.xml/item_roll_write.xml

--- a/app/src/main/res/values-sw600dp/dimens_device.xml
+++ b/app/src/main/res/values-sw600dp/dimens_device.xml
@@ -56,6 +56,7 @@
     <!--  Item roll dimens  -->
 
     <dimen name="item_roll_text">20sp</dimen> <!--2sp-->
+    <dimen name="item_roll_start_space">6dp</dimen> <!--2dp-->
     <dimen name="item_roll_space">10dp</dimen> <!--2dp-->
     <dimen name="item_roll_icon_horizontal_space">6dp</dimen> <!--6dp-->
 
