--- a/app/src/main/res/layout/item_roll_read.xml
+++ b/app/src/main/res/layout/item_roll_read.xml
@@ -33,7 +33,8 @@
             <FrameLayout
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:paddingHorizontal="@dimen/item_roll_icon_horizontal_space">
+                android:paddingHorizontal="@dimen/item_roll_icon_horizontal_space"
+                tools:background="@color/accent_ripple_light">
 
                 <CheckBox
                     android:id="@+id/roll_read_check"
