--- a/app/src/main/res/values/styles_element.xml
+++ b/app/src/main/res/values/styles_element.xml
@@ -332,7 +332,10 @@
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:background">@android:color/transparent</item>
-        <item name="android:padding">@dimen/item_roll_space</item>
+        <item name="android:paddingStart">@dimen/item_roll_start_space</item>
+        <item name="android:paddingTop">@dimen/item_roll_space</item>
+        <item name="android:paddingEnd">@dimen/item_roll_space</item>
+        <item name="android:paddingBottom">@dimen/item_roll_space</item>
         <item name="android:textSize">@dimen/item_roll_text</item>
     </style>
 
