--- a/app/src/main/res/layout/item_notification.xml
+++ b/app/src/main/res/layout/item_notification.xml
@@ -61,7 +61,7 @@
                 android:layout_marginStart="@dimen/item_content_between_space"
                 android:layout_marginEnd="@dimen/item_content_horizontal_space"
                 android:contentDescription='@{@string/description_item_notification_cancel + " " + (item.note.name.isEmpty() ? @string/hint_text_name : item.note.name) + @string/description_item_notification_cancel_at + " " + item.alarm.date}'
-                android:tint="?attr/clContent"
+                app:tint="?attr/clContent"
                 app:srcCompat="@drawable/ic_cancel_enter" />
 
         </LinearLayout>
