--- a/app/src/main/res/values-ru/strings_app.xml
+++ b/app/src/main/res/values-ru/strings_app.xml
@@ -2,7 +2,7 @@
 <resources>
 
     <!--  Shortcuts  -->
-    <string name="shortcut_short_text_label">Текстовая</string>
+    <string name="shortcut_short_text_label">Текст</string>
     <string name="shortcut_short_roll_label">Список</string>
     <string name="shortcut_medium_text_label">Создать текстовую заметка</string>
     <string name="shortcut_medium_roll_label">Создать список</string>
