Move fab inside include layout + fix some UI test asserts in MainScreen.kt

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,49 +24,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
 
-        <com.google.android.material.floatingactionbutton.FloatingActionButton
-            android:id="@+id/main_add_fab"
-            style="?attr/styleFab"
-            android:layout_width="wrap_content"
-            android:contentDescription="@string/description_add_note"
-            android:layout_height="wrap_content"
-            android:layout_gravity="bottom|end"
-            android:layout_margin="@dimen/layout_16dp"
-            app:srcCompat="@drawable/ic_add"
-            app:useCompatPadding="false" />
-
-        <androidx.cardview.widget.CardView
-            android:layout_width="56dp"
-            android:layout_height="56dp"
-            android:layout_gravity="bottom|start"
-            android:layout_marginStart="@dimen/layout_16dp"
-            android:layout_marginEnd="@dimen/layout_16dp"
-            android:layout_marginBottom="@dimen/layout_16dp"
-            app:cardCornerRadius="28dp"
-            app:cardElevation="@dimen/elevation_6dp">
-
-            <View
-                android:id="@+id/test_anim"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:background="@drawable/gradient_fab_anim" />
-
-            <View
-                android:id="@+id/test_anim_click"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:background="?attr/selectableItemBackground"
-                android:clickable="true" />
-
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:contentDescription="@null"
-                android:src="@drawable/ic_add"
-                app:tint="?attr/clBackgroundView" />
-
-        </androidx.cardview.widget.CardView>
+        <include layout="@layout/inc_gradient_fab" />
 
     </FrameLayout>
 
