--- a/app/src/main/res/values/values_app.xml
+++ b/app/src/main/res/values/values_app.xml
@@ -9,7 +9,8 @@
     <integer name="note_open_time">300</integer>
     <integer name="note_change_time">200</integer>
 
-    <integer name="fade_anim_time">200</integer>
+    <integer name="fragment_fade_time">200</integer>
+    <integer name="fab_change_time">150</integer>
     <integer name="color_fade_time">200</integer>
     <integer name="color_transition_time">200</integer>
 
