--- a/app/src/main/res/layout/activity_alarm.xml
+++ b/app/src/main/res/layout/activity_alarm.xml
@@ -8,7 +8,7 @@
     android:orientation="vertical"
     tools:context="sgtmelon.scriptum.cleanup.presentation.screen.ui.impl.notification.AlarmActivity">
 
-    <sgtmelon.scriptum.cleanup.presentation.view.RippleContainer
+    <sgtmelon.scriptum.infrastructure.widgets.ripple.RippleContainer
         android:id="@+id/alarm_ripple_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
